--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,38 @@
+.build
 nimcache
+nimsuggest.log
 *.exe
 /dec05-typescript/solution.js
 node_modules
-/dec06-julia/*.ipynb
-/dec06-julia/.ipynb_checkpoints/*.ipynb
+*.ipynb
+.ipynb_checkpoints
+elm-stuff
+index.html
+.idea
+*.iml
+npm-debug.*
+out
+.vscode
+.analysis_options
+/dec12-dart/.packages
+/dec15-rust/.project
+target
+.settings
+*.class
+dist
+.stack-work
+*.cabal
+*.o
+*.hi
+.nrepl-port
+.lein-repl-history
+.ceylon
+modules
+bin
+obj
+*.user
+*.suo
+*.ali
+/dec21-ada/solution
+Cargo.lock
+notes.md
